2023-09-21T08:17:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6259022607 # 1196
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1695 159899 / 1724 162853
* notice: next accum: outdated-unq outdated-all / unq all: 1695 159899 / 1726 162965
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -113 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2023-09-07 2023-09-21]

2023-09-21T00:58:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6255807310 # 1195
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
* notice: last 14d: unq all: 4 2900
* notice: prev accum: outdated-unq outdated-all / unq all: 1692 159598 / 1724 162757
* notice: next accum: outdated-unq outdated-all / unq all: 1695 159899 / 1724 162853
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -54 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-09-06] / [2023-09-07 2023-09-20]

2023-09-20T16:17:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6251335251 # 1194
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
* notice: last 14d: unq all: 4 2899
* notice: prev accum: outdated-unq outdated-all / unq all: 1692 159598 / 1724 162665
* notice: next accum: outdated-unq outdated-all / unq all: 1692 159598 / 1724 162757
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -92 / +3 +205 -0 -0 / 3 205
* notice: removed / changed dates: [] / [2023-09-06 2023-09-20]

2023-09-20T08:17:22Z: