@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-21T08:17:21Z",
-  "count" : 133,
-  "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -167, +300 ],
+  "timestamp" : "2023-09-21T16:16:05Z",
+  "count" : 41,
+  "count_minmax" : [ 41, 300 ],
+  "count_decinc" : [ -259, +300 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
