@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-09-21T08:17:21Z",
+  "timestamp" : "2023-09-21T16:16:05Z",
   "count_outdated" : 159899,
   "uniques_outdated" : 1695,
-  "count" : 162965,
+  "count" : 163057,
   "uniques" : 1726,
   "clones" : [
     {
       "timestamp": "2023-09-07T00:00:00Z",
-      "count": 133,
-      "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 167, 300 ],
+      "count": 41,
+      "count_minmax": [ 41, 300 ],
+      "count_decinc": [ 259, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-09-21T00:00:00Z",
-      "count": 112,
-      "count_minmax": [ 112, 112 ],
-      "count_decinc": [ 0, 112 ],
+      "count": 204,
+      "count_minmax": [ 112, 204 ],
+      "count_decinc": [ 0, 204 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
