@@ -1,3 +1,12 @@
+2023-09-21T16:16:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6264321635 # 1197
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
+* notice: last 14d: unq all: 4 2899
+* notice: prev accum: outdated-unq outdated-all / unq all: 1695 159899 / 1726 162965
+* notice: next accum: outdated-unq outdated-all / unq all: 1695 159899 / 1726 163057
+* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -92 / +2 +204 -0 -0 / 2 204
+* notice: removed / changed dates: [] / [2023-09-07 2023-09-21]
+
 2023-09-21T08:17:21Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6259022607 # 1196
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
